tests/invalid/invalid_class_body/main.py
class Foo:
    x = undefined_symbol
